Module 7.2 Push bioSite

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 
     <div class="about-layout">
         <div class="portrait">
-            <div class="portrait-placeholder"></div>
+            <img src="Portrait-Module5-CSD340.jpg" alt="Portrait of Ashley Moore" class="portrait-img">
             <p class="portrait-caption"><em>Ashley Moore - Mother, Hiker, Traveler</em></p>
         </div>
         <div class="bio-text">
