--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 
         <section class="image-gallery">
             <div class="image-card">
-                <div class="placeholder-box"></div>
+                <img src="goals_1.jpg" alt="Ashley with family at sunset" class="gallery-img">
                 <p>Family</p>
             </div>
             <div class="image-card">
-                <div class="placeholder-box"></div>
+                <img src="goals_2.jpg" alt="Map of National Parks in the U.S." class="gallery-img">
                 <p>National Park Adventures</p>
             </div>
             <div class="image-card">
-                <div class="placeholder-box"></div>
+                <img src="goals_3.jpg" alt="Scenic view from Arches National Park" class="gallery-img">
                 <p>Traveling Moments</p>
             </div>
         </section>
