--- a/hobbies.html
+++ b/hobbies.html
@@ -14,42 +14,41 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="hobbies.html">Hobbies</a>
-		<a href="bio.html">Bio</a>
+        <a href="bio.html">Bio</a>
     </nav>
 
     <main>
-    <h2>Hiking, Camping & More</h2>
-    <div class="hobbies">
-        <h3>Outdoor Adventures</h3>
-        <p>From national parks like Glacier and Arches to kayaking trips and spontaneous road adventures, Ashley thrives in nature.</p>
-    </div>
+        <h2>Hiking, Camping & More</h2>
+        <div class="hobbies">
+            <h3>Outdoor Adventures</h3>
+            <p>From national parks like Glacier and Arches to kayaking trips and spontaneous road adventures, Ashley thrives in nature.</p>
+        </div>
 
-    <div class="hobby-gallery">
-        <div class="hobby-card">
-            <div class="placeholder-box"></div>
-            <p>Hiking</p>
+        <div class="hobby-gallery">
+            <div class="hobby-card">
+                <img src="hobbies_1.jpg" alt="Hiking Trail" class="hobby-image">
+                <p>Hiking</p>
+            </div>
+            <div class="hobby-card">
+                <img src="hobbies_2.jpg" alt="Kayaking Trip" class="hobby-image">
+                <p>Kayaking</p>
+            </div>
+            <div class="hobby-card">
+                <img src="hobbies_3.jpeg" alt="Camping Adventure" class="hobby-image">
+                <p>Camping</p>
+            </div>
         </div>
-        <div class="hobby-card">
-            <div class="placeholder-box"></div>
-            <p>Kayaking</p>
-        </div>
-        <div class="hobby-card">
-            <div class="placeholder-box"></div>
-            <p>Camping</p>
-        </div>
-    </div>
-</main>
+    </main>
 
     <footer>
         <p>&copy; 2025 Ashley Moore</p>
-		<p>
-    <a href="https://jigsaw.w3.org/css-validator/check/referer">
-        <img style="border:0;width:88px;height:31px"
-            src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
-            alt="Valid CSS!" />
-    </a>
-</p>
-       
+        <p>
+            <a href="https://jigsaw.w3.org/css-validator/check/referer">
+                <img style="border:0;width:88px;height:31px"
+                     src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+                     alt="Valid CSS!" />
+            </a>
+        </p>
     </footer>
 </body>
 </html>
